@@ -1,3 +1,6 @@
+[22/11/2010]
+- RealmThread : Correction des problèmes liés a la reconnexion.
+
 [19/11/2010]
 - SpellEffect/Fight : Correction des invocations "Mal ciblables".
 
